--- a/templates/template.html
+++ b/templates/template.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 <!DOCTYPE html>
 <html  class="no-js" lang="fa" dir="rtl">
   <head>
@@ -43,7 +43,7 @@
                     </button>
 
                     <a class="navbar-brand" href="{% url 'index' %}">			                
-                      بستون
+                      Accountant
                     </a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
