--- a/accountant/templates/index.html
+++ b/accountant/templates/index.html
@@ -76,7 +76,7 @@
   <p>
       این در واقع یک سیستم نگهداری دخل و خرج شخصی است. پول‌هایی که در آوردین رو توش می‌زنین و پول‌هایی که خرج کردین رو یادداشت می‌کنین.
       اما این سیستم شدیداً در ابتدای راهه، دلیلش؟ این سیستم داره به عنوان یک پروسه آموزش کار می‌کنه و
-      <a href="http://jadi.net/tag/بستون">
+      <a href="https://github.com/amirhoseinshojaei/Django-Accountant">
         من قدم به قدم کارهایی که برای راه انداختن اینجا دارم می‌کنم رو منتشر کرده‌ام
       </a>
       .
@@ -87,7 +87,7 @@
       <ul>
         {% comment %} to do : edit url clients {% endcomment %}
       <li> از صفحه رجیستریشن که این بغل و اون بالاست، ثبت نام کنین و توکن دریافت کنین</li>
-      <li>از یکی از کلاینت‌ها برای اتصال استفاده کنین. <a href="https://github.com/jadijadi/bestoon/tree/master/clients/commandline">کلاینت‌های کامند لاینی هستن که با کرل کار می کنن و لازمه کدی که دریافت کردین رو توی فایل کانفیگشون وارد کنین</a>. منطقاً در آینده کلاینت تحت وب و اپ و غیره هم خواهیم داشت.
+      <li>از یکی از کلاینت‌ها برای اتصال استفاده کنین. <a href="https://github.com/amirhoseinshojaei/Django-Accountant/tree/main/Clients/Command%20Line">کلاینت‌های کامند لاینی هستن که با کرل کار می کنن و لازمه کدی که دریافت کردین رو توی فایل کانفیگشون وارد کنین</a>. منطقاً در آینده کلاینت تحت وب و اپ و غیره هم خواهیم داشت.
       <li> خرج و دخل‌ها رو وارد سیستم کنین و منتظر باشین که هی سیستم کامل‌تر بشه</li>
       </ul>
 
