--- a/templates/register.html
+++ b/templates/register.html
@@ -29,7 +29,7 @@
 <p>
   البته این فعلا یک سیستم شخصی است و این یک نکته مثبته: من این رو برای استفاده خودم توسعه می دم و در نتیجه دائما باید برای یک استفاده کننده واقعی بهینه بشه. اگر شما
   هم گپ یا پیشنهادی درموردش داشتین
-  <a href="https://www.google.com/webhp?authuser=1">
+  <a href="https://mail.google.com/amirhoseinshojaeiwork90@gmail.com">
    از این راه ها برام بفرستید و مطمئن باشیددیر یا زود خونده میشن.
   </a>
 </p>
